--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -26,7 +26,7 @@ $line-height-base: 1.6;
 $text-color: #636b6f;
 
 // Open-iconic
-$iconic-font-path: "/assets/fonts/open-iconic/";
+$fa-font-path: "/assets/fonts/font-awesome/";
 
 // Inputs
 $input-border-color: lighten($text-color, 40%);
