[Laravel] Upgrade to v5.6

--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -1,33 +1,10 @@
 
 // Body
-$body-bg: #fff;
-
-// Borders
-$laravel-border-color: darken($body-bg, 10%);
-$list-group-border-color: $laravel-border-color;
-
-$card-border-color: $laravel-border-color;
-
-// Brands
-$primary: #007bff;
-$info: #17a2b8;
-$success: #28a745;
-$warning: #ffc107;
-$danger: #c82333;
-
-// Card
-$card-spacer-y: .1rem;
-$card-spacer-x: 1rem;
+$body-bg: #f5f8fa;
 
 // Typography
-$font-family-sans-serif: "Raleway", sans-serif;
+$font-family-sans-serif: "Roboto", sans-serif;
 $font-size-base: .875rem; // 14px
 $line-height-base: 1.6;
-$text-color: #636b6f;
 
-// Open-iconic
 $fa-font-path: "/assets/fonts/font-awesome/";
-
-// Inputs
-$input-border-color: lighten($text-color, 40%);
-$input-placeholder-color: lighten($text-color, 30%);
