--- a/resources/assets/sass/_variables.scss
+++ b/resources/assets/sass/_variables.scss
@@ -1,4 +1,3 @@
-
 // Body
 $body-bg: #f5f8fa;
 
@@ -7,4 +6,5 @@ $font-family-sans-serif: "Roboto", sans-serif;
 $font-size-base: .875rem; // 14px
 $line-height-base: 1.6;
 
+// Font Awesome
 $fa-font-path: "/assets/fonts/font-awesome/";
